# vibe-template

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  ENV_VARS.md  LICENSE  README.md  template.ecosystem.config.cjs
backend/: .env.example  main.py  pyproject.toml
backend/lib/: api.py  database.py  models.py  schemas.py
frontend/: .env.example  app.vue  nuxt.config.ts  package-lock.json  package.json
frontend/composables/: useApi.ts
