[project]
name = "app"
version = "0.1.0"
description = "Fullstack web application template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.8",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.44",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
postgresql = [
    "psycopg2-binary>=2.9.11",
]
